@@ -63,3 +63,10 @@ indexpage:
           url: https://www.netapp.com/pdf.html?item=/media/7395-tr4811.pdf
         - title: "Credit Card Fraud Detection"
           url: https://www.netapp.com/pdf.html?item=/media/17205-tr4807pdf.pdf
+#
+    - title: "SuperPOD: A NetApp and NVIDIA Solution"
+      links:
+        - title: "BeeGFS on NetApp (Design Guide)"
+          url: https://www.netapp.com/pdf.html?item=/media/71123-nva-1164-design.pdf
+        - title: "BeeGFS on NetApp (Deployment Guide)"
+          url: https://www.netapp.com/pdf.html?item=/media/71124-nva-1164-deploy.pdf
