@@ -3,6 +3,8 @@
 |===
 | *Date* | *Solution Area* | *Description of change*
 // end::header[]
+// tag::aiml[]
+| 05/20/2022 | AI | New BeeGFS Design and Deployment guides for SuperPOD 
 // tag::containers[]
 | 03/29/2022 | Containers | Added a new TR: DevOps with NetApp Astra
 // end::containers[]
